dark mode color fix

--- a/css/diagram.css
+++ b/css/diagram.css
@@ -12,7 +12,7 @@ a {
         color: #EEE
     }
     a {
-        color: #EEE;
+        color: #999;
     }
     
 }
